[project]
name = "fyp-visualisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "dash[compress,diskcache]>=3.0.2",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=2.0.0",
    "jupyter>=1.1.1",
    "plotly>=6.0.1",
    "polars>=1.26.0",
    "seaborn>=0.13.2",
    "dash-bootstrap-templates>=2.1.0",
]
